[package]
name = "zk-altjubjub"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10.8"
lazy_static = "1.4.0"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2.8"
halo2_proofs = { git = "https://github.com/DelphinusLab/halo2-gpu-specific.git", default-features = true }
rand = "0.8"
hex = "0.4"
ff = "0.12"
